# testing-sphinx-readthedocs

./: .readthedocs.yaml  CHANGELOG.md  changelog.md  pyproject.toml
.github/workflows/: release.yml  semantic-version.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/development/: contribution.rst  license.rst
docs/source/getting-started/: installation.rst  introduction.rst  usage.rst
youva/: youva_test.py
