[project]
name = "youva"
version = "0.1.5"
description = "YOUVA project"
authors = [
    { name = "Rohit Kumar" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
  "python-semantic-release>=9.0.0"
]

[tool.semantic_release]
version_variables = [
  "pyproject.toml:project.version"
]
tag_format = "v{version}"
branch = "main"
commit_version_number = true
commit_message = "chore(release): {version}"
major_on_zero = false

